# json-variables-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
derive_json_variables/: Cargo.toml
derive_json_variables/src/: lib.rs
json_variables/: Cargo.toml
json_variables/examples/: test.rs
json_variables/src/: error.rs  lib.rs  traits.rs  tree.rs  variables.rs
json_variables/tests/: tree_build_test.rs  variabler_replacement_test.rs  variables_change_pattern.rs  variables_derive_attributes_tests.rs  variables_derive_tests.rs  variables_deserialize_tests.rs
