[package]
name = "derive_json_variables"
version = "0.1.0"
edition = "2024"
authors = ["Mathieu Groenen"]
license = "MIT"
repository = ""
description = ""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }

json_variables = { path = "../json_variables" }
