[package]
name = "derive_json_variables"
version = "0.1.0"
edition = "2024"
authors = ["Mathieu Groenen"]
license = "MIT"
repository = ""
description = ""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

quote = "1.0.40"

darling = "0.21.0"
